@@ -25,41 +25,15 @@
 ?>
 <?php
 
-    /**
-     * If you are changing ZM_ROOT, make sure to update 
-     * ..\zen-cart\includes\init_includes\overrides\init_templates.php
-     * and
-     * ..\zen-cart\admin\includes\init_includes\overrides\init_templates.php
-     *
-     * The full order of action is:
-     * 1) Uninstall all ZenMagick patches (as some use this value to generate code)
-     * 2) Rename directory
-     * 3) Update ZM_ROOT
-     * 4) Update the files mentioned above
-     * 5) Re-install plugins
-     */
-    define('ZM_ROOT', 'zenmagick/');
-    define('ZM_DEFAULT_THEME', 'default');
+/** If used as modelClass parameter, the raw SQL data will be returned (no mapping, etc); deprecated */
+define('ZM_DB_MODEL_RAW', '@raw');
 
+/** Internal date format; deprecated */
+define('ZM_DB_DATETIME_FORMAT', 'Y-m-d H:i:s');
 
-    //** url page name key **//
-
-    define('ZM_PAGE_KEY', 'main_page');
-
-
-    //** db **//
-
-    define('ZM_DB_PREFIX', DB_PREFIX);
-
-
-    //** date/time formats used internally by all models **//
-
-    define('ZM_DATE_FORMAT', 'yyyy-mm-dd');
-    define('ZM_DATETIME_FORMAT', 'yyyy-mm-dd hh:ii:ss');
-
-
-    //** others **//
-
-    define('PRODUCTS_OPTIONS_TYPE_SELECT', 0);
+/** NULL date; deprecated */
+define('ZM_DB_NULL_DATE', '0001-01-01');
+/** NULL datetime; deprecated */
+define('ZM_DB_NULL_DATETIME', '0001-01-01 00:00:00');
 
 ?>
