@@ -57,6 +57,10 @@ Release 0.9.5
 - allow PluginView to accept the plugin as object or string (plugin id)
 - allow optional index in SQL data names to be able to use multiple values of
   a column in a single SQL statement
+- remvove deprecated method(s): ZMRequest::getRequestParameter(),
+  ZMPlugin::filterResponse(), ZMPlugin::setLoaderSupport(),
+	ZMPlugin::getLoaderSupport(), ZMTools::ui2date(), ZMTools::parseDate(),
+	ZM_DB_xxx defines, ZMObject::create()
 
 Release 0.9.4.2
 - improve ZMAjaxController::flattenObject(); using ZMBeanUtils, correct
